ecmascript/parser/tests/test262-error-references/fail/1b2e164ac5015a12.js.stderr
error: Expected ,, got .
 --> $DIR/tests/test262-parser/fail/1b2e164ac5015a12.js:1:10
  |
1 | ({a({e: a.b}){}})
  |          ^

